--- a/css/hl-theme.css
+++ b/css/hl-theme.css
@@ -110,6 +110,7 @@ textarea {
 /* page width elements */
 
 .page-home .region-content-top .block,
+.hl__hero,
 .hl__content-block--dark-image,
 .hl__content-block--light-image,
 .hl__content-block--dark,
@@ -400,7 +401,8 @@ h6 {
 
 h1,
 h1#page-title,
-body.page-home .region-content-top h2 {
+body.page-home .region-content-top h2,
+.hl__hero .boxes-box-content h2 {
     font-size: 60px;
     line-height: 74px;
     padding: 0;
@@ -896,6 +898,9 @@ body.page-home .region-content-top::after {
     content: "";
     display: block;
     height: 1px;
+}
+body.page-home .hl__hero + #columns .region-content-top::after {
+  background-image: none;
 }
 
 body.page-home .region-content-top h2, body.page-home .region-content-top p {
@@ -1804,10 +1809,8 @@ ul.pager li a:focus {
 }
 
 /* text-align: center */
-
 .hl__content-block--dots-button, .hl__content-block--dark, .hl__content-block--light {
     text-align: center;
-    /* padding: 0; */
 }
 
 #content-column .hl__content-block--dots-button .block-inner,
@@ -1839,7 +1842,7 @@ ul.pager li a:focus {
 
 
 /* image backgrounds */
-
+.hl__hero,
 .hl__content-block--dark-image,
 .hl__content-block--light-image,
 .hl__quick-facts {
@@ -1850,7 +1853,7 @@ ul.pager li a:focus {
     max-height: 400px;
     position: relative;
 }
-
+.hl__hero img,
 .hl__content-block--dark-image img,
 .hl__content-block--light-image img,
 .hl__quick-facts img {
@@ -1866,7 +1869,7 @@ ul.pager li a:focus {
     padding-right: 0 !important;
     margin: auto;
 }
-
+.hl__hero h2,
 .hl__content-block--dark-image h2,
 #content-column .hl__content-block--dark-image p,
 .hl__content-block--dark h2,
@@ -1874,7 +1877,7 @@ ul.pager li a:focus {
 .hl__quick-facts ul li {
     color: white;
 }
-
+.hl__hero .boxes-box-content div,
 .hl__content-block--dark-image .boxes-box-content div,
 .hl__content-block--light-image .boxes-box-content div,
 .hl__quick-facts .boxes-box-content ul {
@@ -1887,7 +1890,7 @@ ul.pager li a:focus {
     transform: translate(-50%, -50%);
     z-index: 10;
 }
-
+.hl__hero .boxes-box-content>p,
 .hl__content-block--dark-image .boxes-box-content>p,
 .hl__content-block--light-image .boxes-box-content>p,
 .hl__quick-facts .boxes-box-content>p {
@@ -1896,7 +1899,7 @@ ul.pager li a:focus {
     padding: 40px 0;
     margin-bottom: 0;
 }
-
+.hl__hero .boxes-box-content>p::before,
 .hl__content-block--dark-image .boxes-box-content>p::before,
 .hl__content-block--light-image .boxes-box-content>p::before,
 .hl__quick-facts .boxes-box-content>p::before {
@@ -1908,6 +1911,10 @@ ul.pager li a:focus {
     right: 0;
     top: 0;
     z-index: 1;
+}
+
+.hl__hero .boxes-box-content>p::before {
+  background-color: rgba(30,30,30,0.4);
 }
 
 .hl__content-block--light-image .boxes-box-content>p::before {
