--- a/css/hl-theme.css
+++ b/css/hl-theme.css
@@ -84,7 +84,7 @@
 }
 
 /* LORA FONT */
-<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 /* GLOBAL */
 
